--- a/WebAppService/Areas/Admin/Views/DichVu/DichVu.cshtml
+++ b/WebAppService/Areas/Admin/Views/DichVu/DichVu.cshtml
@@ -380,7 +380,13 @@
                             </select>
                         </div>
                     </div>
-                    <table id="tableDichVu" data-toggle="table" data-flat="true" data-search="true" data-url="">
+                    <table id="tableDichVu" 
+                           data-toggle="table" 
+                           data-flat="true" 
+                           data-search="true" 
+                           data-pagination="true"
+                           data-page-size="10"
+                           data-page-list="[5, 10, 15, all]" data-url="">
                         <thead>
                             <tr>
                                 <th data-formatter="fm_editData" data-sortable="true" data-width="5" data-width="5"
