--- a/WebAppService/Views/Home/Index.cshtml
+++ b/WebAppService/Views/Home/Index.cshtml
@@ -476,7 +476,7 @@
                                 <img class="border-radius-10 w-100" src="~/root/imgservice.png" height="100%" alt="post-slider">
                             </a>
                             <div class="play_btn play_btn_small position-absolute top-50 start-50 translate-middle">
-                                <a class="play-video" href="https://vimeo.com/333834999">
+                                <a class="play-video" href="~/filesuploads/video_202507/31b33756-4fad-43a0-87cb-405ba140aa8b.mp4">
                                     <i class="fa fa-play"></i>
                                 </a>
                             </div>
@@ -522,7 +522,7 @@
                                             <img class="border-radius-10 w-100" src="~/root/imgserve2.png" height="150px" alt="post-slider">
                                         </a>
                                         <div class="play_btn play_btn_small position-absolute top-50 start-50 translate-middle">
-                                            <a class="play-video" href="https://vimeo.com/333834999">
+                                            <a class="play-video" href="https://www.youtube.com/embed/H8RW1P04dtU?si=26jqkigJOJZxH-aO">
                                                 <i class="fa fa-play"></i>
                                             </a>
                                         </div>
