--- a/WebAppService/Views/Shared/_ClientMenu.cshtml
+++ b/WebAppService/Views/Shared/_ClientMenu.cshtml
@@ -46,7 +46,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/Blog/Blog">
+                            <a href="/Service/ServiceList">
                                 Chuyên Khoa
                             </a>
                         </li>
