--- a/WebAppService/Views/Doctor/DoctorDetail.cshtml
+++ b/WebAppService/Views/Doctor/DoctorDetail.cshtml
@@ -1,17 +1,21 @@
 ﻿@using WebAppService.Models
 
 <link href="~/web/assets/css/doctor-detail.css" rel="stylesheet" />
-
+<div class="entry-header entry-header-2 mb-3 mt-0 text-center">
+    <div class="thumb-overlay img-hover-slide position-relative" style="background-image: url(/web/assets/imgs/farme.png)">
+    </div>
+</div>
 <div class="container_detail_doctor">
-
     <div class="profile-container">
         <div class="row">
             <div class="profile-image col-md-6 col-12">
-                <img src="@Model.UrlImage" alt="@Model.HoTen" class="profile-photo" />
+                <div class="post-thumb d-flex img-hover-scale doctor-avartar">
+                <img src="@Model.UrlImage" alt="@Model.HoTen" class="img-fluid img-respone-service" />
+                </div>
                 <div class="degree-title">@Model.ChucDanh</div>
             </div>
             <div class="profile-info col-md-6 col-12">
-                <h2 class="name">@Model.HoTen</h2>
+                <div class="name"><strong>@Model.HoTen</strong></div>
                 <h4 class="department">@Model.DonViKhoa </h4>
 
                 <div class="section">
@@ -24,11 +28,9 @@
                     <p>@Model.NgonNgu</p>
                 </div>
 
-                <div class="section">
+                <div class="section text-fix" style=" list-style: disc !important;">
                     <h3><i class="fas fa-user icon text_title"></i> Kinh nghiệm làm việc</h3>
-                    <ul>
-                        @Model.KinhNghiemLamViec
-                    </ul>
+                    @Html.Raw(Model.KinhNghiemLamViec)
                 </div>
             </div>
         </div>
