--- a/WebAppService/Views/Service/ServiceList.cshtml
+++ b/WebAppService/Views/Service/ServiceList.cshtml
@@ -25,7 +25,7 @@
                     <input type="text" class="form-control w-100 border-0 pb-0" placeholder="Tìm dịch vụ ..." name="name" value="" />
                 </div>
                 <div class="col-4 " style="padding:15px 0px">
-                    <a href="#" class="main-menu btn-sm btn-orrange font-weight-bold w-100"><i class="fa fa-search"></i> Tìm kiếm</a>
+                    <a href="#" class="main-menu btn-sm btn-orrange font-weight-bold w-100"><i class="fa fa-search"></i> <span>Tìm</span> </a>
                 </div>
             </div>
         </div>
