--- a/WebAppService/wwwroot/web/assets/css/doctor-detail.css
+++ b/WebAppService/wwwroot/web/assets/css/doctor-detail.css
@@ -1,12 +1,10 @@
 ﻿.container_detail_doctor {
-    /* font-family: 'Manrope', sans-serif; */
     margin: 0;
     background-color: #f9fdfd;
     display: flex;
     justify-content: center;
     padding: 40px;
 }
-
 
 .profile-container {
     display: flex;
@@ -18,6 +16,7 @@
 .profile-image {
     position: relative;
     text-align: center;
+    background-color: #F8FFFF;
 }
 
     .profile-image img {
@@ -27,11 +26,14 @@
 
 .degree-title {
     position: absolute;
+    background: white;
     top: 0;
     right: 0;
     color: #ff5b00;
-    font-weight: 600;
-    padding: 6px 12px;
+    font-weight: 700;
+    font-family: 'Inter', sans-serif;
+    font-size: 15px !important;
+    padding: 10px 18px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
 }
 
@@ -44,11 +46,13 @@
     font-weight: 800;
     color: #2F4848;
     margin-bottom: 8px;
+    font-family: 'Montserrat'
 }
 
 .department {
     font-size: 16px;
     font-weight: 700;
+    color: #f26522;
     margin-bottom: 24px;
     font-family: 'Inter', sans-serif;
 }
@@ -58,52 +62,76 @@
 }
 
     .section h3 {
-        font-size: 16px;
-        font-weight: 600;
-        margin-bottom: 6px;
+        font-size: 14px;
+        font-weight: bold;
+        color: #2F4848;
+        margin-bottom: 15px;
         font-family: 'Plus Jakarta Sans', sans-serif;
     }
 
     .section p,
     .section ul {
-        font-size: 15px;
+        font-size: 12px;
         line-height: 1.6;
         color: #333;
         font-family: 'Inter', sans-serif;
     }
 
-    .section ul {
-        padding-left: 20px;
-    }
+.text-fix {
+    font-size: 12px !important;
+    line-height: 1.6;
+    color: #333;
+    font-family: 'Inter', sans-serif;
+}
 
-    .section li {
-        margin-bottom: 8px;
-    }
+.section ul {
+    padding-left: 20px;
+}
+
+.section li {
+    margin-bottom: 8px;
+}
 
 i {
     margin-right: 6px;
 }
-.degree-title {
-    font-size: 18px;
-    font-weight: 700;
-    color: #F26522;
-    font-family: 'Inter', sans-serif;   
-}
-.name {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 40px;
-}
+
+
 .profile-photo {
     width: 300px;
+    background-color: #F8FFFF;
     height: auto;
 }
+
 h3 {
     font-family: 'Plus Jakarta Sans', sans-serif;
     color: #5E5B5B;
 }
+
+.bg-doctor {
+    /*background-color: #F8FFFF;*/
+}
+
+.doctor-avartar {
+    background-color: #F8FFFF;
+    justify-self: center;
+}
+
+.img-respone-service {
+    height: 380px;
+    width: 100%;
+}
+
 @media screen and (max-width: 768px) {
     .profile-photo {
         width: 200px;
         height: auto;
+    }
+    .section h3 {
+        font-size: 14px;
+        font-weight: bold;
+        color: #2F4848;
+        margin-bottom: 5px;
+        font-family: 'Plus Jakarta Sans', sans-serif;
     }
 }
