--- a/WebAppService/wwwroot/web/assets/css/service.css
+++ b/WebAppService/wwwroot/web/assets/css/service.css
@@ -57,17 +57,6 @@ h2 {
     -webkit-box-orient: vertical;
 }
 
-.card-active {
-    background: #00B9B5;
-    color: #ffffff !important;
-}
-
-.card-active a,
-.card-active p,
-.card-active .post-title {
-    color: #ffffff !important;
-}
-
 .card-hover:hover {
     background: #00B9B5;
     color: #ffffff !important;
@@ -91,7 +80,8 @@ h2 {
     }
 
     .psi-1 {
-        padding-left: 8px;
+        padding-left: 6px;
+        padding-right: 4px;
     }
 
     .text-media {
