--- a/WebAppService/Views/Home/Index.cshtml
+++ b/WebAppService/Views/Home/Index.cshtml
@@ -87,7 +87,7 @@
                 <div class="t_mb2 d-block d-sm-none text-left">Hành Trình Vì Sức Khỏe Cộng Đồng</div>
                 <div class="img_avt2 col-sm-5 mb-30 text-center d-flex">
                     <div class="avatar2" style="width:453.98px;height:443.88px">
-                        <a href="author.html"><img src="~/root/group 4.png" alt="" ></a>
+                        <a href="author.html"><img src="/root/group 4.png" alt="" ></a>
                     </div>
                 </div>
                 <div class="title_sv col-sm-7 author-info d-flex flex-column justify-content-center d-none d-sm-block">
@@ -174,7 +174,6 @@
                             </div>
                         </article>
                     </div>
-
                 </div>
             </div>
         </div>
